[BAEL-7421] - Creating Postgres Schema with Liquibase